Expose JMX actuator endpoints

--- a/dog-service/src/main/resources/application.yml
+++ b/dog-service/src/main/resources/application.yml
@@ -26,6 +26,10 @@ management:
       exposure:
         include:
         - "*"
+    jmx:
+      exposure:
+        include:
+        - "*"
 
 application:
   security:
