Add sanitizer and show env values

--- a/dog-service/src/main/resources/application.yml
+++ b/dog-service/src/main/resources/application.yml
@@ -30,6 +30,9 @@ management:
       exposure:
         include:
         - "*"
+  endpoint:
+    env:
+      show-values: always
 
 application:
   security:
