--- a/dog-service/src/main/resources/application.yml
+++ b/dog-service/src/main/resources/application.yml
@@ -33,6 +33,9 @@ management:
   endpoint:
     env:
       show-values: always
+  tracing:
+    sampling:
+      probability: 1.0
 
 application:
   security:
