Enable MVC problem details

--- a/dog-service/src/main/resources/application.yml
+++ b/dog-service/src/main/resources/application.yml
@@ -7,6 +7,9 @@ spring:
     open-in-view: false
   jmx:
     enabled: true
+  mvc:
+    problemdetails:
+      enabled: true
   sql:
     init:
       mode: always
