Add native image support

--- a/dog-service/src/main/resources/application.yml
+++ b/dog-service/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   jpa:
     open-in-view: false
   jmx:
-    enabled: true
+    enabled: false
   mvc:
     problemdetails:
       enabled: true
